tree and start of tasks packages.

--- a/meteor/client/tree-test.jade
+++ b/meteor/client/tree-test.jade
@@ -1,4 +1,33 @@
 //
    Created by kriz on 08.12.14.
 
-template(name='TreeTest')
+template(name='Main')
+   .container
+      .row
+         .col-md-3
+            +TreeContent
+         .col-md-6
+            +NodeContent
+
+template(name='TreeContent')
+   a#add(href='#')
+      span.glyphicon.glyphicon-plus
+   a#rem(href='#')
+      span.glyphicon.glyphicon-minus
+   #tree-content
+
+template(name='NodeContent')
+   if nodeSelected
+
+      with currentNode
+         +NodeToolbar
+         +each threads
+            +NodeThread
+
+template(name='NodeThread')
+   div
+      +showThread
+
+template(name='NodeToolbar')
+   +each toolbars
+      +renderBar
