--- a/meteor/packages/tasks/tasks.jade
+++ b/meteor/packages/tasks/tasks.jade
@@ -2,12 +2,18 @@
    Created by kriz on 10.12.14.
 
 template(name='Task')
-   h3 Task !{data.name}
-      a#rem(href='#')
-         span.glyphicon.glyphicon-minus
+   .panel.panel-default
+      .panel-heading
+         .panel-title
+            if titleEdit
+               input(type='text')
+            else
+               a#title-edit !{data.name}
+               a#rem(href='#')
+                  span.glyphicon.glyphicon-minus
+      .panel-body
+         Panel content
 
 template(name='TaskToolbar')
    a#add(href='#')
       span.glyphicon.glyphicon-plus
-   a#rem(href='#')
-      span.glyphicon.glyphicon-minus
