markdown editor draft;

--- a/meteor/packages/tasks/tasks.jade
+++ b/meteor/packages/tasks/tasks.jade
@@ -16,7 +16,7 @@ template(name='Task')
                      span.glyphicon.glyphicon-ok
       else
          .panel-heading.clearfix
-            h3.panel-title.pull-left Task: !{data.name}
+            h3.panel-title.pull-left It's Task: !{data.name}
 
             .btn-group.pull-right
                a#edit.btn.btn-default.btn-sm(href='#')
