--- a/meteor/packages/wiki/wiki.jade
+++ b/meteor/packages/wiki/wiki.jade
@@ -1,28 +1,28 @@
 template(name='Wiki')
     .panel.panel-default
-          if editState
-             form.form
+        if editState
+            form.form
                 .panel-body
-                   .form-group
-                      input.form-control(type='text' name='name' value='#{data.name}')
-                   .form-group
-                      textarea.form-control(name='content') #{data.content}
+                    .form-group
+                        input.form-control(type='text' name='name' value='#{data.name}')
+                    .form-group
+                        textarea.form-control(name='content' data-provide='markdown-editable') #{data.content}
 
                 .panel-footer
-                      button.btn.btn-primary(type='submit')
-                         span.glyphicon.glyphicon-ok
-          else
-             .panel-heading.clearfix
-                h3.panel-title.pull-left Wiki: !{data.name}
+                    button.btn.btn-primary(type='submit')
+                        span.glyphicon.glyphicon-ok
+        else
+            .panel-heading.clearfix
+                h3.panel-title.pull-left It's Wiki: !{data.name}
 
                 .btn-group.pull-right
-                   a#edit.btn.btn-default.btn-sm(href='#')
-                      span.glyphicon.glyphicon-pencil
-                   a#remove.btn.btn-danger.btn-sm(href='#')
-                      span.glyphicon.glyphicon-remove
+                    a#edit-wiki.btn.btn-default.btn-sm(href='#')
+                        span.glyphicon.glyphicon-pencil
+                    a#remove-wiki.btn.btn-danger.btn-sm(href='#')
+                        span.glyphicon.glyphicon-remove
 
-             .panel-body
+            .panel-body
                 !{data.content}
 
 template(name='WikiToolbar')
-   a#add-wiki.btn.btn-default(href='#') W
+    a#add-wiki.btn.btn-default(href='#') W
