fix jade text output

--- a/meteor/packages/tasks/tasks.jade
+++ b/meteor/packages/tasks/tasks.jade
@@ -25,7 +25,7 @@ template(name='Task')
                   span.glyphicon.glyphicon-remove
 
          .panel-body
-            !{data.content}
+            | !{data.content}
 
 template(name='TaskToolbar')
    a#add.btn.btn-default(href='#') T
