add markdown package wiki markdown show

--- a/meteor/packages/wiki/wiki.jade
+++ b/meteor/packages/wiki/wiki.jade
@@ -22,7 +22,8 @@ template(name='Wiki')
                         span.glyphicon.glyphicon-remove
 
             .panel-body
-                !{data.content}
+                +markdown
+                    !{data.content}
 
 template(name='WikiToolbar')
     a#add-wiki.btn.btn-default(href='#') W
