people package with avatar

--- a/meteor/client/tree-test.jade
+++ b/meteor/client/tree-test.jade
@@ -32,3 +32,7 @@ template(name='NodeToolbar')
     .btn-group
         +each toolbars
             +UI.dynamic template=templateName data=..
+
+
+template(name='UnknownThread')
+    h6 Unknown thread of type !{type}
