--- a/meteor/packages/people/people.jade
+++ b/meteor/packages/people/people.jade
@@ -2,37 +2,31 @@
    Created by kriz on 11.12.14.
 
 template(name='People')
-    .panel.panel-default
-        if inst.isEditing
-            form.thread.form
-                .panel-body
-                    .form-group
-                        span First name
-                        input.form-control(type='text' name='firstname' value='#{data.firstname}')
-                    .form-group
-                        span Last name
-                        input.form-control(type='text' name='lastname' value='#{data.lastname}')
-                    .form-group
-                        span Email
-                        input.form-control(type='text' name='email' value='#{data.email}')
-                .panel-footer
-                    button#save.btn.btn-primary(type='submit')
-                        span.glyphicon.glyphicon-ok
-        else
-            .panel-heading.clearfix
-                h3.panel-title.pull-left !{data.name}
-                .btn-group.pull-right
-                    a#edit.btn.btn-default.btn-sm(href='#')
-                        span.glyphicon.glyphicon-pencil
-                    a#remove.btn.btn-danger.btn-sm(href='#')
-                        span.glyphicon.glyphicon-remove
-            .panel-body
-                +avatar email=data.email
-                | Name: !{data.firstname}
-                br
-                | Last name: !{data.lastname}
-                br
-                | Email: !{data.email}
+    if isEditing
+        form.thread.form
+            .form-group
+                span First name
+                input.form-control(type='text' name='firstname' value='#{data.firstname}')
+            .form-group
+                span Last name
+                input.form-control(type='text' name='lastname' value='#{data.lastname}')
+            .form-group
+                span Email
+                input.form-control(type='text' name='email' value='#{data.email}')
+            button#save.btn.btn-primary(type='submit')
+                span.glyphicon.glyphicon-ok
+            button#cancel.btn.btn-primary(type='button')
+                span.glyphicon.glyphicon-ban-circle
+            button#remove.btn.btn-danger.btn-sm(type='button')
+                span.glyphicon.glyphicon-remove
+
+    else
+        +avatar email=data.email
+        | Name: !{data.firstname}
+        br
+        | Last name: !{data.lastname}
+        br
+        | Email: !{data.email}
 
 
 template(name='PeopleUpdate')
